# ver-stub-rs

./: Cargo.toml  README.md  test_cross.sh  test_cross_linux_host.sh  test_cross_macos_host.sh  test_ios_build.sh  test_run_macos_artifact.sh  tests.sh
.github/workflows/: ci.yml
ver-stub/: Cargo.toml  build.rs
ver-stub-build/: Cargo.toml  README.md
ver-stub-build/src/: cargo_helpers.rs  error.rs  git_helpers.rs  lib.rs  llvm_tools.rs  rustc.rs  update_section.rs
ver-stub-build/src/llvm_tools/: mod.rs  parsing.rs
ver-stub-example/: Cargo.toml
ver-stub-example-build/: Cargo.toml  build.rs
ver-stub-example-build/src/: lib.rs
ver-stub-example-objcopy/: Cargo.toml
ver-stub-example-objcopy/src/: main.rs
ver-stub-example/.cargo/: config.toml
ver-stub-tool/: Cargo.toml  README.md
ver-stub-tool/src/: main.rs
ver-stub/src/: lib.rs
