[package]
name = "ver-stub-build"
version = "0.1.0"
description = "Build script helper for injecting version data into binaries"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
ver-stub = { path = "../ver-stub", version = "0.1.0" }
heck = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
