[package]
name = "ver-stub-tool"
version = "0.3.0"
description = "CLI tool for injecting version data into binaries"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ver-stub"
path = "src/main.rs"

[dependencies]
conf = { version = "0.4.4", default-features = false }
ver-stub-build = { path = "../ver-stub-build", version = "0.3.0" }
